--- a/.github/workflows/next-market-sync.yml
+++ b/.github/workflows/next-market-sync.yml
@@ -1,74 +1,69 @@
+# 한국어(ko) 폴더를 감시하여 영어(en), 중국어(zh), 일본어(ja)로 자동 번역
 name: Next-Market-Global-Sync
 
 on:
   push:
     paths:
-      - 'ko/**' # 한국어 폴더 수정 시 작동
+      - 'ko/**' # 한국어 폴더 내 파일 변경 시에만 작동
     branches:
       - main
   workflow_dispatch: # 수동 실행 버튼
 
 jobs:
-  translate:
+  build-and-translate:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: DeepL Translation Engine
+      - name: Set up Translation Engine
         env:
           DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
         run: |
+          # 1. 대상 언어 및 코드 정의
           TARGET_LANGS=("en" "zh" "ja")
           DEEPL_CODES=("EN-US" "ZH" "JA")
 
-          if [ ! -d "ko" ]; then
-            echo "ko 폴더가 없습니다."
-            exit 0
-          fi
-
+          # 2. ko 폴더 내의 모든 .md 파일 탐색 (SUMMARY.md 포함)
+          # 이전 버전과 달리 SUMMARY.md를 제외하지 않고 모두 번역 루프에 넣습니다.
           find ko -name "*.md" | while read file; do
-            REL_PATH=${file#ko/}
+            REL_PATH=${file#ko/} # ko/ 이후의 상대 경로 추출
+            
             for i in "${!TARGET_LANGS[@]}"; do
               LANG=${TARGET_LANGS[$i]}
               CODE=${DEEPL_CODES[$i]}
               TARGET_FILE="$LANG/$REL_PATH"
+
+              # 저장될 폴더 생성
               mkdir -p "$(dirname "$TARGET_FILE")"
-              
-              # 1. 'Next Market' 단어 보호 (번역 제외 처리)
-              ORIGINAL_CONTENT=$(cat $file)
+
+              echo "Translating $file to $TARGET_FILE ($CODE)..."
+
+              # 'Next Market' 단어 보호 로직 추가
+              ORIGINAL_CONTENT=$(cat "$file")
               PROTECTED_CONTENT=$(echo "$ORIGINAL_CONTENT" | sed 's/Next Market/<span translate="no">Next Market<\/span>/g')
 
-              # 2. DeepL API 호출
-              TRANSLATED_RAW=$(curl -s -X POST "[https://api-free.deepl.com/v2/translate](https://api-free.deepl.com/v2/translate)" \
+              # DeepL API 호출
+              # tag_handling=html 옵션은 [제목](link.md) 구조에서 제목만 번역하고 링크는 보존합니다.
+              TRANSLATED_RAW=$(curl -s -X POST "https://api-free.deepl.com/v2/translate" \
                 -H "Authorization: DeepL-Auth-Key $DEEPL_API_KEY" \
                 -d "text=$PROTECTED_CONTENT" \
                 -d "source_lang=KO" \
                 -d "target_lang=$CODE" \
                 -d "tag_handling=html" | jq -r '.translations[0].text')
-              
-              # 3. 삽입했던 보호 태그 제거 (결과물 깔끔하게 유지)
+
+              # 번역 결과 저장 및 보호 태그 복구
               if [ "$TRANSLATED_RAW" != "null" ] && [ -n "$TRANSLATED_RAW" ]; then
                 FINAL_CONTENT=$(echo "$TRANSLATED_RAW" | sed 's/<span translate="no">Next Market<\/span>/Next Market/g')
                 echo "$FINAL_CONTENT" > "$TARGET_FILE"
-                echo "Successfully translated $file to $TARGET_FILE"
               fi
             done
           done
 
-      - name: Sync SUMMARY.md
-        run: |
-          for lang in en zh ja; do
-            if [ -f "ko/SUMMARY.md" ]; then
-              mkdir -p "$lang"
-              cp "ko/SUMMARY.md" "$lang/SUMMARY.md"
-            fi
-          done
-
-      - name: Commit and Push
+      - name: Commit and Push Changes
         run: |
           git config --global user.name "Next-Market-Bot"
           git config --global user.email "bot@unifi.network"
           git add en/ zh/ ja/
-          git commit -m "docs: Next Market 용어 보호 및 자동 번역 완료" || echo "No changes"
+          git commit -m "docs: SUMMARY.md를 포함한 모든 문서 자동 번역 완료" || echo "No changes"
           git push origin main
